@@ -1,3 +1,3 @@
-EBUILD squashed-portage-9999.ebuild 539 RMD160 e7495ee6af116f0af8704ed046c0050312dcf14b SHA1 b11aa2cc739a86a362dce11836088e78bcc0d6d9 SHA256 4adba4886c14a89c9926106deeff998a66452f97c1f88726368382ead04bd314
-MISC ChangeLog 237 RMD160 6dae42b6e617da17c9e3c012cc5e0ec4f8b76d45 SHA1 6f35c6cc8de38a8a63d524f936880bc088605b3b SHA256 de95089e3d3692b15a900c754196f51a2c0566210e033963dc95c3517b06db45
+EBUILD squashed-portage-9999.ebuild 674 RMD160 f6d31b07c7ae0042eb488d8343c3561873f23280 SHA1 f56b297dda1bb1b9aaf267b87497a3e60ad02f39 SHA256 9cadf0583bef6224b1bee1a7d7142156db3be9fa3e98513569528b04dee95475
+MISC ChangeLog 373 RMD160 0174df9cb51eb4c28f2f99cc972b47779949826b SHA1 2f2bea1168edf6af4e18a9d4a6414d4852e5ca5f SHA256 9363ac7ad84ac14e9ec7f348912568e5442c3a487300ad0de2380324e11425da
 MISC metadata.xml 410 RMD160 e463a3c900c452fcf180649f10085af2673f35eb SHA1 65a5520812a20ca0844c9a23f05ee293b808bb9a SHA256 236b08c44bb746ee01700ed03def0e7e9f90cd5f6d8bb0165b8488db80629b26
